--- a/MusicNotesEditor/Views/QrConnectWindow.xaml
+++ b/MusicNotesEditor/Views/QrConnectWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Connect Phone"
         WindowStartupLocation="CenterOwner"
-        ResizeMode="NoResize"
+        ResizeMode="CanResize"
         SizeToContent="WidthAndHeight"
         Background="#111"
         FontFamily="{StaticResource BeVietnam}">
@@ -52,25 +52,59 @@
                                VerticalAlignment="Center"/>
                     </Border>
 
-                    <!-- Steps -->
-                    <StackPanel Grid.Row="2" Margin="0 20 0 0">
-                        <TextBlock Text="1. Connect phone and computer to the same Wi-Fi"
-                                   Foreground="#9a8cff"
-                                   FontSize="14"
-                                   Margin="0 5"/>
-                        <TextBlock Text="2. Open Eurydice app on your phone"
-                                   Foreground="#9a8cff"
-                                   FontSize="14"
-                                   Margin="0 5"/>
-                        <TextBlock Text="3. Scan the QR code"
-                                   Foreground="#9a8cff"
-                                   FontSize="14"
-                                   Margin="0 5"/>
-                        <TextBlock Text="4. Send the image using app"
-                                   Foreground="#9a8cff"
-                                   FontSize="14"
-                                   Margin="0 5"/>
-                    </StackPanel>
+                    <Grid Grid.Row="2" Margin="0 20 0 0">
+                        <StackPanel x:Name="StepsPanel" Visibility="Visible">
+                            <TextBlock Text="1. Connect phone and computer to the same Wi-Fi"
+                   Foreground="WhiteSmoke"
+                   FontSize="14"
+                   Margin="0 5"/>
+                            <TextBlock Text="2. Open Eurydice app on your phone"
+                   Foreground="WhiteSmoke"
+                   FontSize="14"
+                   Margin="0 5"/>
+                            <TextBlock Text="3. Scan the QR code"
+                   Foreground="WhiteSmoke"
+                   FontSize="14"
+                   Margin="0 5"/>
+                            <TextBlock Text="4. Send the image using app"
+                   Foreground="WhiteSmoke"
+                   FontSize="14"
+                   Margin="0 5"/>
+                        </StackPanel>
+
+                        <Border x:Name="RequestPanel"
+            Background="#1b182b"
+            BorderBrush="#292834"
+            BorderThickness="2"
+            CornerRadius="10"
+            Padding="10"
+            Visibility="Collapsed">
+                            <StackPanel>
+                                <TextBlock x:Name="DeviceNameText"
+                       Foreground="White"
+                       FontSize="16"
+                       FontWeight="Bold"
+                       Margin="0 5"
+                       Text="Incoming request:"/>
+
+                                <StackPanel Orientation="Horizontal"
+                        HorizontalAlignment="Center"
+                        Margin="0 10 0 0">
+
+                                    <Button Content="Approve"
+                        Width="100"
+                        Margin="5"
+                        Click="Approve_Click"/>
+
+                                    <Button Content="Deny"
+                        Width="100"
+                        Margin="5"
+                        Click="Deny_Click"/>
+                                </StackPanel>
+                            </StackPanel>
+                        </Border>
+                    </Grid>
+
 
                 </Grid>
             </Border>
