--- a/MusicNotesEditor/Views/QrConnectPage.xaml
+++ b/MusicNotesEditor/Views/QrConnectPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="MusicNotesEditor.Views.QrConnectWindow"
+﻿<Page x:Class="MusicNotesEditor.Views.QrConnectPage"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Connect Phone"
