--- a/MusicNotesEditor/Views/FileArrangerPage.xaml
+++ b/MusicNotesEditor/Views/FileArrangerPage.xaml
@@ -316,8 +316,8 @@
                 <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
                     <Button x:Name="btnCancel" Content="Cancel" Click="BtnCancel_Click"
                             Width="100" Height="35" Margin="0,0,10,0"
-                            Background="Transparent"
-                            Foreground="#FF6B5B95"
+                            Background="#FF4A4365"
+                            Foreground="White"
                             BorderBrush="#FF6B5B95"
                             BorderThickness="1"/>
 
