--- a/MusicNotesEditor/Views/CreditsPage.xaml
+++ b/MusicNotesEditor/Views/CreditsPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="MusicNotesEditor.Views.MainMenuPage"
+﻿<Page x:Class="MusicNotesEditor.Views.CreditsPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -42,7 +42,7 @@
                     <Grid.RowDefinitions>
                         <RowDefinition Height="0.2*"/>
                         <RowDefinition Height="*"/>
-                        <RowDefinition Height="0.1*"/>
+                        <RowDefinition Height="0.2*"/>
                     </Grid.RowDefinitions>
 
                     <TextBlock 
