--- a/MusicNotesEditor/Views/MainMenuPage.xaml
+++ b/MusicNotesEditor/Views/MainMenuPage.xaml
@@ -218,7 +218,7 @@
                                     </Grid.RowDefinitions>
 
                                     <Image Grid.Column="0" Grid.RowSpan="2" 
-                                           Source="/Assets/settings.png" 
+                                           Source="/Assets/credits.png" 
                                            Width="60"
                                            Height="60"
                                            VerticalAlignment="Center"
