--- a/MusicNotesEditor/Views/CreditsPage.xaml
+++ b/MusicNotesEditor/Views/CreditsPage.xaml
@@ -48,26 +48,61 @@
                     <TextBlock 
                         Grid.Row="0"  
                         FontSize="50" 
-                        HorizontalAlignment="Left"
+                        HorizontalAlignment="Center"
                         VerticalAlignment="Top"
                         Foreground="White"
                         Text="Credits">
                     </TextBlock>
 
                     <StackPanel Grid.Row="1">
-                        <TextBlock FontSize="25" Margin="20,0,0,0" Foreground="White">
-                            <Run Text="• "/>
-                            <Run Text="First list item"/>
+                        <TextBlock FontSize="25" FontWeight="Medium" Margin="20,0,0,0" Foreground="White">
+                            <Run Text="Authors:"/>
                         </TextBlock>
-                        <TextBlock FontSize="25" Margin="20,0,0,0" Foreground="White">
+                        <TextBlock FontSize="20" Margin="20,0,0,0" Foreground="White">
                             <Run Text="• "/>
-                            <Run Text="Second list item"/>
+                            <Run Text="Katarzyna Jaroszyńska"/>
                         </TextBlock>
-                        <TextBlock FontSize="25" Margin="20,0,0,0" Foreground="White">
+                        <TextBlock FontSize="20" Margin="20,0,0,0" Foreground="White">
                             <Run Text="• "/>
-                            <Run Text="Third list item"/>
+                            <Run Text="Jakub Moszyński"/>
                         </TextBlock>
+                        <TextBlock FontSize="20" Margin="20,0,0,0" Foreground="White">
+                            <Run Text="• "/>
+                            <Run Text="Kacper Pytkiewicz"/>
+                        </TextBlock>
+
+                        <TextBlock FontSize="20" Margin="20,0,0,0" Foreground="White">
+                            <Run Text="• "/>            
+                            <Run Text="Maciej Zawrzykraj"/>
+                        </TextBlock>
+
+                        <TextBlock FontSize="25" Margin="20,20,0,0" Foreground="White">          
+                            <Run FontWeight="Medium" Text="Supervisor: "/>
+                            <Run Text="dr Maciej Walczyński"/>
+                        </TextBlock>
+
+                        <TextBlock FontSize="15" FontWeight="Medium" Margin="20,20,0,0" Foreground="White">          
+                            <Run Text="Copyrights: "/>
+                        </TextBlock>
+                        <TextBlock FontSize="12" Margin="20,0,0,0" Foreground="White">
+                            <Run Text=" "/>
+                            <Run Text="© Image Icon by @kreason via Canva.com"/>
+                        </TextBlock>
+                        <TextBlock FontSize="12" Margin="20,0,0,0" Foreground="White">
+                            <Run Text=" "/>
+                            <Run Text="© File Upload Icon by @hajicon via Canva.com"/>
+                        </TextBlock>
+                        <TextBlock FontSize="12" Margin="20,0,0,0" Foreground="White">
+                            <Run Text=" "/>
+                            <Run Text="© Black book icon - outline by @teddyal via Canva.com"/>
+                        </TextBlock>
+                        <TextBlock FontSize="12" Margin="20,0,0,0" Foreground="White" TextWrapping="Wrap">
+                            <Run Text=" "/>
+                            <Run Text="This project was created using resources provided by Wroclaw Centre for Networking and Supercomputing (http://wcss.pl/)."/>
+                        </TextBlock>
+
                     </StackPanel>
+                    
 
                     <Button Grid.Row="2" x:Name="btnReturn" Content="Return" Click="ReturnToMenu"
                         Width="100" Height="35" Margin="0,0,10,0"
